--- a/build.gradle
+++ b/build.gradle
@@ -1,15 +1,33 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
+    ext {
+        activity_version = '1.1.0'
+        appcompat_version = '1.2.0'
+        constraintlayout_version = '2.0.4'
+        core_ktx_version = '1.3.2'
+        kotlin_version = '1.4.32'
+        lifecycle_version = '2.3.1'
+        material_version = '1.3.0'
+        nav_version = '2.3.5'
+        databinding_version = '4.2.2'
+        retrofit_version = '2.9.0'
+        paging_version = '2.1.2'
+        githubapi_version = '1.132'
+    }
     repositories {
         google()
-        mavenCentral()
+        jcenter()
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:7.0.0-beta03"
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.5.20"
+        classpath 'com.android.tools.build:gradle:4.2.0'
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
+    }
+}
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+allprojects {
+    repositories {
+        google()
+        jcenter()
     }
 }
 
