--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,8 +3,10 @@ plugins {
     id 'kotlin-android'
     id 'kotlin-kapt'
     id 'androidx.navigation.safeargs.kotlin'
-    id 'com.google.gms.google-services'
+//    id 'com.google.gms.google-services'
 }
+
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 30
@@ -44,6 +46,7 @@ dependencies {
     implementation "androidx.appcompat:appcompat:$appcompat_version"
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation "androidx.core:core-ktx:$core_ktx_version"
+    implementation 'androidx.fragment:fragment-ktx:1.4.0-alpha06'
 
     // UI
     implementation "com.google.android.material:material:$material_version"
@@ -59,6 +62,7 @@ dependencies {
 
     // DataBinding
     implementation "androidx.databinding:databinding-runtime:$databinding_version"
+    implementation 'com.google.firebase:firebase-common-ktx:19.5.0'
     kapt "com.android.databinding:compiler:$databinding_version"
 
     // Retrofit
@@ -66,6 +70,7 @@ dependencies {
 
     // Firebase Auth
     implementation "com.firebaseui:firebase-ui-auth:5.0.0"
+    implementation "com.firebaseui:firebase-ui-auth-github:5.0.0"
 
     // Paging
     implementation "androidx.paging:paging-runtime:$paging_version" // For Kotlin use paging-runtime-ktx
