--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ buildscript {
     ext {
         activity_version = '1.1.0'
         appcompat_version = '1.2.0'
-        constraintlayout_version = '2.0.4'
+        constraintlayout_version = '2.0.0-beta1'
         core_ktx_version = '1.3.2'
         kotlin_version = '1.4.32'
         lifecycle_version = '2.3.1'
