--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
         retrofit_version = '2.9.0'
         paging_version = '3.0.0-alpha03'
         githubapi_version = '1.132'
+        room_version = '2.3.0'
     }
     repositories {
         google()
